Utilizing 8bit timer to quickly PB0 HIGH/LOW

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "delay.h": "c"
+        "delay.h": "c",
+        "io.h": "c",
+        "alloca.h": "c"
     }
 }
